<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TagLauncher</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="action_bundle">Aktions-Bündel</string>
    <string name="add_action_bundle">Neues Aktions-Bündel</string>
    <string name="add_action_bundle_2">Aktions-Bündel hinzufügen</string>
    <string name="delete_action_bundle">Aktions-Bündel löschen</string>
    <string name="delete_action_bundle_q">Aktions-Bündel löschen?</string>
    <string name="delete_action_bundle_dialog">%1$s wird unwiederruflich gelöscht!</string>
    <string name="duplicate_action_bundle">Aktions-Bündel duplizieren</string>
    <string name="rename_action_bundle">Aktions-Bündel umbennen</string>
    <string name="delete">Löschen</string>
    <string name="duplicate">Duplizieren</string>
    <string name="rename">Umbennen</string>
    <string name="cancel">Abbrechen</string>
    <string name="add_action">Aktion hinzufügen</string>
    <string name="title_activity_activity_all_actions">Alle Aktionen</string>
    <string name="details">Details</string>
    <string name="copy_string">%1$s Kopie</string>
    <string name="restore_previous_volume">Vorherige Lautstärke wiederherstellen</string>
    <string name="volume">Lautstärke</string>
    <string name="apply">Übernehmen</string>
    <string name="s_byte">%1$s Byte</string>
    <string name="s_byte_2">%1$s von %2$s Byte</string>
    <string name="write_ab_to_tag">Tag beschreiben</string>
    <string name="hello_world">Hello world!</string>
    <string name="waiting_for_tag">Warte auf Tag&#8230;</string>
    <string name="writing_to_tag">Wird beschrieben&#8230;</string>
    <string name="writing_failed">Beschreiben fehlgeschlagen</string>    
    <string name="cancel_write">Beschreiben abgebrochen</string>
    <string name="write_success">Tag beschrieben</string>
    <string name="tag_too_small">Das Aktionsbündel ist zu groß für den verwendeten Tag, da dieser nur %1$s Bytes groß ist. Bitte einen größeren Tag verwenden oder das Aktionsbündel verkleinern.</string>
    <string name="tag_execute_success">Aktionsbündel ausgeführt</string>
    <string name="tag_execute_failure">Fehler beim Ausführen des Aktionsbündels</string>
    <string name="first_run_dialog">Ihr Gerät ist leider nicht NFC-fähig. Daher können Aktionsbündel nur erstellt werden, jedoch nicht auf NFC-Tags geschrieben werden.</string>
    <string name="settings">Einstellungen</string>
    <string name="skip">Überspringen</string>
    <string name="nfc_disabled_dialog">Für die optimale Funktionalität der App muss NFC auf dem Gerät aktiviert sein.</string>
    <string name="no_nfc_support">Gerät unterstützt NFC nicht</string>
    <string name="nfc_disabled">NFC ist nicht aktiviert</string>
    <string name="writing_completed">Tag beschrieben</string>
    <string name="no_tag_found">Es wurde kein Tag erkannt</string>
    <string name="tag_not_compatible">Tag ist mit dem Gerät nicht kompatibel</string>
    <string name="tag_formatted_please_rescan">Tag wurde formatiert. Bitte erneut an das Gerät halten</string>
    <string name="lost_connection_please_rescan">Verbindung zum Tag verloren. Bitte erneut an das Gerät halten</string>
    <string name="write_error_please_retry">Fehler beim Beschreiben. Bitte erneut probieren</string>
    <string name="format_exception">FormatException Exception: Allgemeiner Fehler</string>
    <string name="generic_error">Allgemeiner Fehler</string>
    <string name="connection_not_possible_please_retry">Verbindung zum Tag konnte nicht aufgebaut werden. Bitte erneut versuchen</string>
    <string name="tag_write_protected">Tag ist schreibgeschützt und kann nicht beschreiben werden</string>
    <string name="execute_action_bundle">Aktionsbündel ausführen</string>
    <string name="tag_info">Tag Info</string>
    <string name="importAB">Importieren</string>
    <string name="execute">Ausführen</string>
    <string name="duplicate_error">Duplizieren fehlgeschlagen</string>
    <string name="pref_show_executed_actions">Aktionen beim Scannen anzeigen</string>
    <string name="pref_show_executed_actions_summary">Zeigt beim Ausführen eines Tags die Aktionen an</string>

    <string name="ac_bluetooth_on">Bluetooth anschalten</string>
    <string name="ac_bluetooth_off">Bluetooth ausschalten</string>
    <string name="ac_bluetooth_toggle">Bluetooth umschalten</string>
    <string name="ac_ringer_normal">Laut %1$s</string>
    <string name="ac_ringer_vibrate">Vibrieren</string>
    <string name="ac_ringer_silent">Lautlos</string>
    <string name="ac_media_volume">Medienlautstärke %1$s</string>
    <string name="ac_wlan_on">W-LAN anschalten</string>
    <string name="ac_wlan_off">W-LAN ausschalten</string>
    <string name="ac_wlan_toggle">W-LAN umschalten</string>
    <string name="ac_launch_app">%1$s starten</string>
    <string name="ac_media_play">Musik abspielen</string>
    <string name="ac_media_pause">Musik pausieren</string>
</resources>